tests/NormalTests/paczka1/small_fuzzy/17191170.err
Error in line 1: WGd3tx A951 54,9
Error in line 6: WGd3tx S23 79,7
